# projet_clo

./: .gitignore  Makefile
include/: TNM.hpp
je_sais_plus/: Makefile
je_sais_plus/include/: TNM.hpp
projet_these/: bonjour.py  constants.py  game.py  grid.py  main.py  menu.py  pyproject.toml  results.csv  settings.ini
src/: TNM.cpp
