[project]
name = "clo"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Guillerot lguiller",email = "lguiller@student.42.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
